docs: Update license references and remove obsolete information
Update all references from COPYING to LICENSE. Remove outdated
mailing list, IRC, and bug reporting sections from README.md to
reflect the current state of this fork and its removal of files
and infrastructure that no longer exist.

--- a/doc/man/pingus.6
+++ b/doc/man/pingus.6
@@ -358,6 +358,7 @@ repeat value (switchdoors, liquids, ...).
 Copyright (C) 1998-2011 Ingo Ruhnke <\*(T<grumbel@gmail.com\*(T>>
 See the file AUTHORS for a complete list of contributors.
 Pingus comes with ABSOLUTELY NO WARRANTY. This is free software, and you are
-welcome to redistribute it under certain conditions; see the file COPYING for details.
+welcome to redistribute it under certain conditions; see the file LICENSE for
+details.
 .SH "SEE ALSO"
 http://pingus.seul.org
